Disable fixed backgrounds on iOS

--- a/styles/corporate.module.scss
+++ b/styles/corporate.module.scss
@@ -14,5 +14,4 @@
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
-  background-attachment: fixed;
 }
